--- a/index.html
+++ b/index.html
@@ -173,6 +173,50 @@
           </div>
         </div>
       </section>
+      <!-- Feature Section -->
+      <section class="container">
+        <h1 class="banner-text">Features</h1>
+       <div class="row gx-5 align-items-center">
+        <div class="col-5">
+          <div class="row g-3">
+            <div class="col-lg-12">
+              <div class="card shadow p-3 border-0 h-100 d-flex flex-row align-items-center card-border">
+                <img style="height: 82px; width: 78px;" src="images/house.png" class="card-img-top img-fluid" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title fw-bold">Find the Perfect Fit</h5>
+                  <p class="card-text">Everybody is different, which is why we
+                    offer styles for every body.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="card shadow p-3 border-0 h-100 d-flex flex-row align-items-center card-border">
+                <img style="height: 82px; width: 78px;" src="images/box.png" class="card-img-top img-fluid" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title fw-bold">Free Exchanges</h5>
+                  <p class="card-text">One of the many reasons you can shop
+                    with peace of mind.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="card shadow p-3 border-0 h-100 d-flex flex-row align-items-center card-border">
+                <img style="height: 82px; width: 78px;" src="images/question.png" class="card-img-top img-fluid" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title fw-bold">Contact Our Seller</h5>
+                  <p class="card-text">They are here to help you. That's quite 
+                    literally what we pay them for.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-7">
+          <img class="img-fluid" src="images/shopping.png" alt="">
+        </div>
+        </div>
+       </div>
+      </section>
     </main>
     <footer>
     </footer>
