--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="container">
           <div class="row justify-content-center align-items-center">
             <div class="col-12 col-lg-5">
-              <h1 style="font-size: 80px;" class="banner-text"><span class="focus-text">Be the Penguins</span>
+              <h1 style="font-size: 80px;" class="banner-text text-start my-1"><span class="focus-text">Be the Penguins</span>
                 of Winter</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing 
                   and typesetting industry.</p>
@@ -176,8 +176,8 @@
       <!-- Feature Section -->
       <section class="container">
         <h1 class="banner-text">Features</h1>
-       <div class="row gx-5 align-items-center">
-        <div class="col-5">
+       <div class="row g-5 align-items-center">
+        <div class="col-lg-5 col-12 order-2 order-lg-1">
           <div class="row g-3">
             <div class="col-lg-12">
               <div class="card shadow p-3 border-0 h-100 d-flex flex-row align-items-center card-border">
@@ -211,7 +211,7 @@
             </div>
           </div>
         </div>
-        <div class="col-7">
+        <div class="col-lg-7 col-12 order-1 order-lg-2">
           <img class="img-fluid" src="images/shopping.png" alt="">
         </div>
         </div>
