--- a/index.html
+++ b/index.html
@@ -218,7 +218,11 @@
        </div>
       </section>
     </main>
-    <footer>
+    <footer class="bg-dark text-center container-fluid mt-5">
+      <div class="py-4">
+        <small class="text-light">© 2022 AR Convention Center. All rights reserved</small>
+      <a target="_blank" href="https://www.facebook.com/ar.burhan.560" class="text-decoration-none d-block"><i class="fas fa-heart"></i> AR Burhan</a>
+      </div>
     </footer>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
